--- a/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
@@ -4,11 +4,21 @@
 
 <p *ngIf="!marcasCaminhao"><em>Loading...</em></p>
 
+<div class="commands text-right" *ngIf="marcasCaminhao">
+  <button type="submit"
+          [routerLink]="['/marcaCaminhao']"
+          class="btn btn-success">
+      Inserir
+  </button>
+</div>
+
 <table mat-table [dataSource]="marcasCaminhao" class="mat-elevation-z8"
  [hidden]="!marcasCaminhao">
   <ng-container matColumnDef="nome">
     <th mat-header-cell *matHeaderCellDef>Nome</th>
-    <td mat-cell *matCellDef="let marca">{{marca.descricao}}</td>
+    <td mat-cell *matCellDef="let marca">
+      <a [routerLink]="['/marcaCaminhao', marca.id]">{{marca.descricao}}</a>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
