--- a/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao-editar-component/marca-caminhao-editar.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao-editar-component/marca-caminhao-editar.component.html
@@ -6,7 +6,7 @@
   <div class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
 
       <div class="form-group">
-          <label for="name">Nome:</label>
+          <label for="descricao">Nome:</label>
           <br />
           <input type="text" id="descricao"
                  formControlName="descricao" required
