--- a/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
@@ -2,7 +2,7 @@
 
 <p>Lista das Marcas de caminhão cadastradas.</p>
 
-<p *ngIf="!marcasCaminhao"><em>Loading...</em></p>
+<p *ngIf="!marcasCaminhao"><em>Carregando...</em></p>
 
 <div class="commands text-right" *ngIf="marcasCaminhao">
   <button type="submit"
