--- a/frontend/jsl-cad-caminhoneiro-web/src/app/modelo-caminhao/modelo-caminhao.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/modelo-caminhao/modelo-caminhao.component.html
@@ -10,7 +10,7 @@
           class="btn btn-success">
       Inserir
   </button>
-</div>
+</div><br/>
 
 <table mat-table [dataSource]="modelosCaminhao" class="mat-elevation-z8"
  [hidden]="!modelosCaminhao">
