--- a/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao-editar-component/marca-caminhao-editar.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao-editar-component/marca-caminhao-editar.component.html
@@ -12,16 +12,26 @@
                  formControlName="descricao" required
                  placeholder="Nome da marca"
                  class="form-control" />
-      </div>
+
+            <div *ngIf="descricao?.invalid &&
+              (descricao?.dirty || descricao?.touched)"
+               class="invalid-feedback">
+              <div *ngIf="descricao?.errors?.required">
+                  A descrição é obrigatório
+              </div>
+            </div>
+        </div>
 
       <div class="form-group commands">
           <button *ngIf="id" type="submit"
                   (click)="onSubmit()"
+                  [disabled]="form.invalid"
                   class="btn btn-success">
               Enviar
           </button>
           <button *ngIf="!id" type="submit"
                   (click)="onSubmit()"
+                  [disabled]="form.invalid"
                   class="btn btn-success">
               Enviar
           </button>
