--- a/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
@@ -10,7 +10,7 @@
           class="btn btn-success">
       Inserir
   </button>
-</div>
+</div><br/>
 
 <table mat-table [dataSource]="marcasCaminhao" class="mat-elevation-z8"
  [hidden]="!marcasCaminhao">
@@ -20,6 +20,24 @@
       <a [routerLink]="['/marcaCaminhao', marca.id]">{{marca.descricao}}</a>
     </td>
   </ng-container>
+
+  <ng-container matColumnDef="Acao">
+    <th mat-header-cell *matHeaderCellDef>Ação</th>
+    <td mat-cell *matCellDef="let marca">
+      <button mat-button color="primary" (click)="excluir(marca.id)" [disabled]="excluindoMarca" >
+        Excluir
+      </button>
+    </td>
+  </ng-container>
+
+  <!-- <ng-container matColumnDef="Acao">
+    <th mat-header-cell *matHeaderCellDef>Ação</th>
+    <td mat-cell *matCellDef="let marca">
+      <button mat-button color="primary" (click)="excluir(marca.id)" [disabled]="excluindoMarca" >
+        Excluir
+      </button>
+    </td>
+  </ng-container> -->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
