--- a/frontend/jsl-cad-caminhoneiro-web/src/app/modelo-caminhao/modelo-caminhao-editar/modelo-caminhao-editar.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/modelo-caminhao/modelo-caminhao-editar/modelo-caminhao-editar.component.html
@@ -8,13 +8,6 @@
     <div class="form-group">
       <label for="marcaCaminhaoId">Marca:</label>
       <br />
-      <!-- <select id="marcaCaminhaoId" class="form-control"
-        formControlName="marcaCaminhaoId">
-        <option value="">--- Selecione ---</option>
-        <option *ngFor="let marca of marcasCaminhao" [value]="marca.id">
-          {{ marca.descricao }}
-        </option>
-      </select> -->
       <mat-form-field *ngIf="marcasCaminhao">
         <mat-label>--- Selecione ---</mat-label>
         <mat-select [(value)]="selected" id="marcaCaminhaoId" formControlName="marcaCaminhaoId">
@@ -24,6 +17,15 @@
             </mat-option>
         </mat-select>
       </mat-form-field>
+
+      <div *ngIf="form.controls['marcaCaminhaoId'].invalid &&
+                 (form.controls['marcaCaminhaoId'].dirty ||
+                   form.controls['marcaCaminhaoId'].touched)"
+                 class="invalid-feedback">
+                <div *ngIf="form.controls['marcaCaminhaoId'].errors?.required">
+                  Please select a Country.
+                </div>
+            </div>
     </div>
 
     <div class="form-group">
@@ -33,6 +35,14 @@
                  formControlName="descricao" required
                  placeholder="Nome do modelo"
                  class="form-control" />
+
+          <div *ngIf="descricao?.invalid &&
+                 (descricao?.dirty || descricao?.touched)"
+                  class="invalid-feedback">
+              <div *ngIf="descricao?.errors?.required">
+                  A descrição é obrigatório
+              </div>
+          </div>
       </div>
 
       <div class="form-group">
@@ -42,16 +52,26 @@
                formControlName="ano" required
                placeholder="Ano de fabricação"
                class="form-control" />
+
+        <div *ngIf="descricao?.invalid &&
+            (ano?.dirty || ano?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="ano?.errors?.required">
+             O ano é obrigatório
+          </div>
+        </div>
       </div>
 
       <div class="form-group commands">
           <button *ngIf="id" type="submit"
                   (click)="onSubmit()"
+                  [disabled]="form.invalid"
                   class="btn btn-success">
               Enviar
           </button>
           <button *ngIf="!id" type="submit"
                   (click)="onSubmit()"
+                  [disabled]="form.invalid"
                   class="btn btn-success">
               Enviar
           </button>
