--- a/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/marca-caminhao/marca-caminhao.component.html
@@ -1,7 +1,5 @@
 <h1>Marcas de Caminhão</h1>
 
-<p>Lista das Marcas de caminhão cadastradas.</p>
-
 <p *ngIf="!marcasCaminhao"><em>Carregando...</em></p>
 
 <div class="commands text-right" *ngIf="marcasCaminhao">
@@ -22,22 +20,13 @@
   </ng-container>
 
   <ng-container matColumnDef="Acao">
-    <th mat-header-cell *matHeaderCellDef>Ação</th>
-    <td mat-cell *matCellDef="let marca">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let marca" style="text-align: right;">
       <button mat-button color="primary" (click)="excluir(marca.id)" [disabled]="excluindoMarca" >
         Excluir
       </button>
     </td>
   </ng-container>
-
-  <!-- <ng-container matColumnDef="Acao">
-    <th mat-header-cell *matHeaderCellDef>Ação</th>
-    <td mat-cell *matCellDef="let marca">
-      <button mat-button color="primary" (click)="excluir(marca.id)" [disabled]="excluindoMarca" >
-        Excluir
-      </button>
-    </td>
-  </ng-container> -->
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -45,6 +34,6 @@
 
 <!-- Pagination directive -->
 <mat-paginator [hidden]="!marcasCaminhao"
-    [pageSize]="3"
+    [pageSize]="10"
     [pageSizeOptions]="[10, 20, 50]"
     showFirstLastButtons></mat-paginator>
