--- a/frontend/jsl-cad-caminhoneiro-web/src/app/nav-menu/nav-menu.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/nav-menu/nav-menu.component.html
@@ -39,6 +39,12 @@
            >
             <a class="nav-link text-dark" [routerLink]="['/modelosCaminhao']">Modelos Caminhão</a>
           </li>
+          <li
+              class="nav-item"
+              [routerLinkActive]="['link-active']"
+           >
+            <a class="nav-link text-dark" [routerLink]="['/motoristas']">Motoristas</a>
+          </li>
         </ul>
       </div>
     </div>
