--- a/frontend/jsl-cad-caminhoneiro-web/src/app/modelo-caminhao/modelo-caminhao-editar/modelo-caminhao-editar.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/modelo-caminhao/modelo-caminhao-editar/modelo-caminhao-editar.component.html
@@ -23,7 +23,7 @@
                    marcaCaminhaoId?.touched)"
                  class="invalid-feedback">
                 <div *ngIf="marcaCaminhaoId?.errors?.required">
-                  Please select a Country.
+                  Selecione uma marca.
                 </div>
             </div>
     </div>
