--- a/frontend/jsl-cad-caminhoneiro-web/src/app/motorista/motorista-editar/motorista-editar.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/motorista/motorista-editar/motorista-editar.component.html
@@ -1,66 +1,469 @@
-<div class="city-edit">
+<div>
   <h1>{{titulo}}</h1>
 
   <p *ngIf="this.id && !motorista"><em>Carregando...</em></p>
 
   <div class="form" [formGroup]="form" (ngSubmit)="onSubmit()">
 
+    <h3><b>Motorista</b></h3>
+
     <div class="form-group">
-      <label for="marcaCaminhaoId">Marca:</label>
+      <label for="nome">Nome:</label>
       <br />
-      <mat-form-field *ngIf="marcasCaminhao">
-        <mat-label>--- Selecione ---</mat-label>
-        <mat-select [(value)]="selected" id="marcaCaminhaoId" formControlName="marcaCaminhaoId">
-          <mat-option *ngFor="let marca of marcasCaminhao"
-            [value]="marca.id">
-              {{ marca.descricao }}
-            </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <input type="text" id="nome"
+             formControlName="nome" required
+             placeholder="" maxlength="100" style="width: 500px;"
+             class="form-control" />
 
-      <div *ngIf="marcaCaminhaoId?.invalid &&
-                 (marcaCaminhaoId?.dirty ||
-                   marcaCaminhaoId?.touched)"
-                 class="invalid-feedback">
-                <div *ngIf="marcaCaminhaoId?.errors?.required">
-                  Please select a Country.
-                </div>
-            </div>
-    </div>
-
-    <div class="form-group">
-          <label for="descricao">Nome:</label>
-          <br />
-          <input type="text" id="descricao"
-                 formControlName="descricao" required
-                 placeholder="Nome do modelo"
-                 class="form-control" />
-
-          <div *ngIf="descricao?.invalid &&
-                 (descricao?.dirty || descricao?.touched)"
-                  class="invalid-feedback">
-              <div *ngIf="descricao?.errors?.required">
-                  A descrição é obrigatório
-              </div>
+      <div *ngIf="f.nome?.invalid &&
+             (f.nome?.dirty || f.nome?.touched)"
+              class="invalid-feedback">
+          <div *ngIf="f.nome?.errors?.required">
+              O nome é obrigatório
           </div>
       </div>
+  </div>
 
+  <div class="form-group">
+    <label for="cpf">CPF:</label>
+    <br />
+    <input type="text" id="cpf"
+           formControlName="cpf" required
+           placeholder="" maxlength="11" style="width: 150px;"
+           class="form-control" />
+
+    <div *ngIf="f.cpf?.invalid &&
+        (f.cpf?.dirty || f.cpf?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.cpf?.errors?.required">
+         O CPF é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="dataNascimento">Data Nascimento:</label>
+    <br />
+    <input type="date" id="dataNascimento"
+           formControlName="dataNascimento" required
+           placeholder="" style="width: 200px;"
+           class="form-control" />
+
+    <div *ngIf="f.dataNascimento?.invalid &&
+        (f.dataNascimento?.dirty || f.dataNascimento?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.dataNascimento?.errors?.required">
+         A data de nascimento é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="nomePai">Nome Pai:</label>
+    <br />
+    <input type="text" id="nomePai"
+           formControlName="nomePai" required
+           placeholder="" maxlength="100" style="width: 500px;"
+           class="form-control" />
+
+    <div *ngIf="f.nomePai?.invalid &&
+        (f.nomePai?.dirty || f.nomePai?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.nomePai?.errors?.required">
+         O nome do pai é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="nomeMae">Nome Mãe:</label>
+    <br />
+    <input type="text" id="nomeMae"
+           formControlName="nomeMae" required
+           placeholder="" maxlength="100" style="width: 500px;"
+           class="form-control" />
+
+    <div *ngIf="f.nomeMae?.invalid &&
+        (f.nomeMae?.dirty || f.nomeMae?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.nomeMae?.errors?.required">
+         O nome da mãe é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="naturalidade">Naturalidade:</label>
+    <br />
+    <input type="text" id="naturalidade"
+           formControlName="naturalidade" required
+           placeholder="" maxlength="19" style="width: 200px;"
+           class="form-control" />
+
+    <div *ngIf="f.naturalidade?.invalid &&
+        (f.naturalidade?.dirty || f.naturalidade?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.naturalidade?.errors?.required">
+         A naturalidade é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="numeroRegistroGeral">RG:</label>
+    <br />
+    <input type="text" id="numeroRegistroGeral"
+           formControlName="numeroRegistroGeral" required
+           placeholder="" maxlength="20" style="width: 200px;"
+           class="form-control" />
+
+    <div *ngIf="f.numeroRegistroGeral?.invalid &&
+        (f.numeroRegistroGeral?.dirty || f.numeroRegistroGeral?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.numeroRegistroGeral?.errors?.required">
+         O RG é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="orgaoExpedicaoRegistroGeral">Orgão Expedição RG:</label>
+    <br />
+    <input type="text" id="orgaoExpedicaoRegistroGeral"
+           formControlName="orgaoExpedicaoRegistroGeral" required
+           placeholder="" maxlength="20" style="width: 200px;"
+           class="form-control" />
+
+    <div *ngIf="f.orgaoExpedicaoRegistroGeral?.invalid &&
+        (f.orgaoExpedicaoRegistroGeral?.dirty || f.orgaoExpedicaoRegistroGeral?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.orgaoExpedicaoRegistroGeral?.errors?.required">
+         O orgão de expedição do RG é obrigatório
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="dataExpedicaoRegistroGeral">Data Expedição RG:</label>
+    <br />
+    <input type="date" id="dataExpedicaoRegistroGeral"
+           formControlName="dataExpedicaoRegistroGeral" required
+           placeholder="" style="width: 200px;"
+           class="form-control" />
+
+    <div *ngIf="f.dataExpedicaoRegistroGeral?.invalid &&
+        (f.dataExpedicaoRegistroGeral?.dirty || f.dataExpedicaoRegistroGeral?.touched)"
+         class="invalid-feedback">
+      <div *ngIf="f.dataExpedicaoRegistroGeral?.errors?.required">
+         A data de expedição do RG é obrigatório
+      </div>
+    </div>
+  </div>
+
+    <div formGroupName="enderecoDto">
+      <h3><b>Endereço</b></h3>
       <div class="form-group">
-        <label for="ano">Ano:</label>
+        <label for="logradouro">Logradouro:</label>
         <br />
-        <input type="text" id="ano"
-               formControlName="ano" required
-               placeholder="Ano de fabricação"
+        <input type="text" id="logradouro"
+               formControlName="logradouro" required
+               placeholder="" maxlength="100" style="width: 500px;"
                class="form-control" />
 
-        <div *ngIf="descricao?.invalid &&
-            (ano?.dirty || ano?.touched)"
+        <div *ngIf="f.logradouro?.invalid &&
+            (f.logradouro?.dirty || f.logradouro?.touched)"
              class="invalid-feedback">
-          <div *ngIf="ano?.errors?.required">
-             O ano é obrigatório
+          <div *ngIf="f.logradouro?.errors?.required">
+             O logradouro é obrigatório
           </div>
         </div>
       </div>
+
+      <div class="form-group">
+        <label for="numero">Número:</label>
+        <br />
+        <input type="text" id="numero"
+               formControlName="numero" required
+               placeholder="" maxlength="10" style="width: 100px;"
+               class="form-control" />
+
+        <div *ngIf="f.numero?.invalid &&
+            (f.numero?.dirty || f.numero?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.numero?.errors?.required">
+             O número é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="complemento">Complemento:</label>
+        <br />
+        <input type="text" id="complemento"
+               formControlName="complemento"
+               placeholder="" maxlength="30" style="width: 300px;"
+               class="form-control" />
+      </div>
+
+      <div class="form-group">
+        <label for="bairro">Bairro:</label>
+        <br />
+        <input type="text" id="bairro"
+               formControlName="bairro" required
+               placeholder="" maxlength="50" style="width: 300px;"
+               class="form-control" />
+
+        <div *ngIf="f.bairro?.invalid &&
+            (f.bairro?.dirty || f.bairro?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.bairro?.errors?.required">
+             O Bairro é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="municipio">Município:</label>
+        <br />
+        <input type="text" id="municipio"
+               formControlName="municipio" required
+               placeholder="" maxlength="50" style="width: 300px;"
+               class="form-control" />
+
+        <div *ngIf="f.municipio?.invalid &&
+            (f.municipio?.dirty || f.municipio?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.municipio?.errors?.required">
+             O Município é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="cep">CEP:</label>
+        <br />
+        <input type="text" id="cep"
+               formControlName="cep" required
+               placeholder="" maxlength="8" style="width: 100px;"
+               class="form-control" />
+
+        <div *ngIf="f.cep?.invalid &&
+            (f.cep?.dirty || f.cep?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.cep?.errors?.required">
+             O CEP é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="uf">UF:</label>
+        <br />
+        <input type="text" id="uf"
+               formControlName="uf" required
+               placeholder=""
+               class="form-control" />
+
+        <div *ngIf="f.uf?.invalid &&
+            (f.uf?.dirty || f.uf?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.uf?.errors?.required">
+             A UF é obrigatório
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div formGroupName="habilitacaoDto">
+      <h3><b>Habilitação</b></h3>
+
+      <div class="form-group">
+        <label for="numeroRegistro">Número Registro:</label>
+        <br />
+        <input type="text" id="numeroRegistro"
+               formControlName="numeroRegistro" required
+               placeholder="" maxlength="20" style="width: 150px;"
+               class="form-control" />
+
+        <div *ngIf="f.numeroRegistro?.invalid &&
+            (f.numeroRegistro?.dirty || f.numeroRegistro?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.numeroRegistro?.errors?.required">
+             O Número do Registro é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="categoria">Categoria:</label>
+        <br />
+        <input type="text" id="categoria"
+               formControlName="categoria" required
+               placeholder="" maxlength="2" style="width: 50px;"
+               class="form-control" />
+
+        <div *ngIf="f.categoria?.invalid &&
+            (f.categoria?.dirty || f.categoria?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.categoria?.errors?.required">
+             A categoria é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="dataPrimeiraHabilitacao">Data Primeira Habilitação:</label>
+        <br />
+        <input type="date" id="dataPrimeiraHabilitacao"
+               formControlName="dataPrimeiraHabilitacao" required
+               placeholder="" style="width: 200px;"
+               class="form-control" />
+
+        <div *ngIf="f.dataPrimeiraHabilitacao?.invalid &&
+            (f.dataPrimeiraHabilitacao?.dirty || f.dataPrimeiraHabilitacao?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.dataPrimeiraHabilitacao?.errors?.required">
+             A data da primeira habilitaçao é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="dataValidade">Data Validade:</label>
+        <br />
+        <input type="date" id="dataValidade"
+               formControlName="dataValidade" required
+               placeholder="" style="width: 200px;"
+               class="form-control" />
+
+        <div *ngIf="f.dataValidade?.invalid &&
+            (f.dataValidade?.dirty || f.dataValidade?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.dataValidade?.errors?.required">
+             A data de validade é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="dataEmissao">Data Emissão:</label>
+        <br />
+        <input type="date" id="dataEmissao"
+               formControlName="dataEmissao" required
+               placeholder="" style="width: 200px;"
+               class="form-control" />
+
+        <div *ngIf="f.dataEmissao?.invalid &&
+            (f.dataEmissao?.dirty || f.dataEmissao?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.dataEmissao?.errors?.required">
+             A data de emissão é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="observacao">Observaçao:</label>
+        <br />
+        <input type="text" id="observacao"
+               formControlName="observacao"
+               placeholder="" maxlength="50" style="width: 500px;"
+               class="form-control" />
+      </div>
+    </div>
+
+    <div formGroupName="caminhaoDto">
+      <h3><b>Caminhão</b></h3>
+      <div class="form-group">
+        <label for="marcaCaminhaoId">Marca:</label>
+        <br />
+        <select class="custom-select"
+          (change)="onMarcaSelecionada($event)"
+          [(ngModel)]="marcaSelecionadaId"
+          formControlName="marcaCaminhaoId"
+          id="marcasCaminhao"
+          style="width: 200px;">
+          <option class="option" value="">Selecione uma marca</option>
+          <option class="option" *ngFor="let marca of marcasCaminhao" [value]="marca.id">{{ marca.descricao }}</option>
+        </select>
+
+        <div *ngIf="f.marcaCaminhaoId?.invalid &&
+                   (f.marcaCaminhaoId?.dirty ||
+                     f.marcaCaminhaoId?.touched)"
+                   class="invalid-feedback">
+                  <div *ngIf="f.marcaCaminhaoId?.errors?.required">
+                    Selecione uma marca
+                  </div>
+              </div>
+      </div>
+
+      <div class="form-group">
+        <label for="modeloCaminhaoId">Modelo:</label>
+        <br />
+        <select [attr.disabled]="marcaSelecionadaId ? null : ''"
+          class="custom-select"
+          (change)="onModeloSelecionado($event)"
+          [(ngModel)]="modeloSelecionadoId"
+          formControlName="modeloCaminhaoId"
+          id="modelosCaminhao"
+          style="width: 200px;">
+          <option class="option" value="">Selecione um modelo</option>
+          <option class="option" *ngFor="let modelo of modelosCaminhaoFiltrado" [value]="modelo.id">{{ modelo.descricao }}</option>
+        </select>
+
+        <div *ngIf="f.modeloCaminhaoId?.invalid &&
+                   (f.modeloCaminhaoId?.dirty ||
+                     f.modeloCaminhaoId?.touched)"
+                   class="invalid-feedback">
+                  <div *ngIf="f.modeloCaminhaoId?.errors?.required">
+                    Selecione um modelo
+                  </div>
+              </div>
+      </div>
+
+      <div class="form-group">
+        <label for="placa">Placa:</label>
+        <br />
+        <input type="text" id="placa"
+               formControlName="placa" required
+               placeholder="" maxlength="8" style="width: 100px;"
+               class="form-control" />
+
+        <div *ngIf="f.placa?.invalid &&
+            (f.placa?.dirty || f.placa?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.placa?.errors?.required">
+             A placa é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="eixo">Eixo:</label>
+        <br />
+        <input type="text" id="eixo"
+               formControlName="eixo" required
+               placeholder="" maxlength="2" style="width: 50px;"
+               class="form-control" />
+
+        <div *ngIf="f.eixo?.invalid &&
+            (f.eixo?.dirty || f.eixo?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.eixo?.errors?.required">
+             O eixo é obrigatório
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="observacao">Observaçao:</label>
+        <br />
+        <input type="text" id="observacao"
+               formControlName="observacao"
+               placeholder="" maxlength="30" style="width: 500px;"
+               class="form-control" />
+      </div>
+    </div>
 
       <div class="form-group commands">
           <button *ngIf="id" type="submit"
