--- a/frontend/jsl-cad-caminhoneiro-web/src/app/home/home.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/home/home.component.html
@@ -1,2 +1,2 @@
-<h1>Greetings, stranger!</h1>
-<p>This is what you get for messing up with .NET Core and Angular.</p>
+<h1>Informações Técnicas</h1>
+<p>Descrever as tecnologias usadas nesse projeto</p>
