--- a/frontend/jsl-cad-caminhoneiro-web/src/app/motorista/motorista-editar/motorista-editar.component.html
+++ b/frontend/jsl-cad-caminhoneiro-web/src/app/motorista/motorista-editar/motorista-editar.component.html
@@ -244,6 +244,27 @@
       </div>
 
       <div class="form-group">
+        <label for="uf">UF:</label>
+        <br />
+               <select class="custom-select"
+               [value]="estadoSelecionado"
+               formControlName="uf"
+               id="uf"
+               style="width: 200px;">
+               <option class="option" value="">Selecione um estado</option>
+               <option class="option" *ngFor="let estado of estados" [value]="estado.uf">{{ estado.descricao }}</option>
+             </select>
+
+        <div *ngIf="f.uf?.invalid &&
+            (f.uf?.dirty || f.uf?.touched)"
+             class="invalid-feedback">
+          <div *ngIf="f.uf?.errors?.required">
+             Selecione um estado
+          </div>
+        </div>
+      </div>
+
+      <div class="form-group">
         <label for="cep">CEP:</label>
         <br />
         <input type="text" id="cep"
@@ -260,22 +281,6 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <label for="uf">UF:</label>
-        <br />
-        <input type="text" id="uf"
-               formControlName="uf" required
-               placeholder=""
-               class="form-control" />
-
-        <div *ngIf="f.uf?.invalid &&
-            (f.uf?.dirty || f.uf?.touched)"
-             class="invalid-feedback">
-          <div *ngIf="f.uf?.errors?.required">
-             A UF é obrigatório
-          </div>
-        </div>
-      </div>
     </div>
 
     <div formGroupName="habilitacaoDto">
